--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
+		"dev-net": "vite --host",
 		"build": "tsc && vite build",
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.3",
+		"basscss": "^8.1.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.5",
+		"sass": "^1.59.2"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.27",
